--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
                             </svg>         
                         </div>
                         <div class="home__data">
-                            <h1 class="home__title">Hai, Saya Rifqi Adyafie</h1>
-                            <h3 class="home_subtitle">Web developer</h3>
-                            <p class="home__description">Pengalaman dalam web developer dan desain, menghasilkan pekerjaan yang berkualitas.</p>
+                            <h1 class="home__title">Hai, Saya Muhammad Rifqi Adyafie</h1>
+                            <h3 class="home_subtitle">Hub Processing & Web developer</h3>
+                            <p class="home__description">Pengalaman dalam bidang gudang logistik dan web developer.</p>
                             <a href="#contact" class="button button--flex">
                                 Hubungi <i class="uil uil-message button__icon"></i>
                             </a>
                         </div>
                     </div>
-                    <div class="home__scroll">
+                    <div class="home__scroll" style="margin-top: -3rem;">
                         <a href="#about" class="home__scroll-button button--flex">
                             <i class="uil uil-mouse-alt home__scroll-mouse"></i>
                             <span class="home__scroll-name">Scroll down</span>
@@ -125,10 +125,12 @@
                 <span class="section__subtitle">Perkenalan saya</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/aboutme.jpg" alt="" class="about__img">
+                    <div class="about__image">
+                        <img src="assets/img/aboutme.jpg" alt="" class="about__img">
+                    </div>
 
                     <div class="about__data">
-                        <p class="about__description">Pengembang web, dengan pengetahuan luas dan pengalaman bertahun-tahun, bekerja dalam teknologi web dan desain Ui / Ux, memberikan pekerjaan yang berkualitas.</p>
+                        <p class="about__description">Pengalaman bekerja di gudang logistik membuat saya bisa bekerja menggunakan komputer maupun teknis, dan saya juga memiliki pengetahuan dalam pengembang web. Terbiasa bekerja tim maupun individu dan memberikan pekerjaan yang berkualitas.</p>
 
                         <!-- <div class="about__info">
                             <div>
@@ -147,7 +149,7 @@
                             </div>
                         </div> -->
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/Rifqi_Adyafie-CV.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/CV-Muhammad_Rifqi_Adyafie.pdf" class="button button--flex">
                                 Unduh CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -204,16 +206,6 @@
                                         <span class="skills__percentage skills__js"></span>
                                     </div>
                                 </div>
-
-                                <!-- <div class="skills__data">
-                                    <div class="skills__titles">
-                                        <h3 class="skills__name">React</h3>
-                                        <span class="skills__number">50%</span>
-                                    </div>
-                                    <div class="skills__bar">
-                                        <span class="skills__percentage skills__react"></span>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -224,7 +216,6 @@
                                 <i class="uil uil-server-network skills__icon"></i>
                                 <div>
                                     <h1 class="skills__title">Backend developer</h1>
-                                    <!-- <span class="skills__subtitle">More than 4 years</span> -->
                                 </div>
                                 <i class="uil uil-angle-down skills__arrow"></i>
                             </div>
@@ -312,22 +303,55 @@
                                         <span class="skills__number">40%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__illustrtor"></span>
+                                        <span class="skills__percentage skills__illustrator"></span>
                                     </div>
                                 </div>
-
-                                <!-- <div class="skills__data">
-                                    <div class="skills__titles">
-                                        <h3 class="skills__name">Sketch</h3>
-                                        <span class="skills__number">90%</span>
-                                    </div>
-                                    <div class="skills__bar">
-                                        <span class="skills__percentage skills__sketch"></span>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
+                    <div class="rigth-side">
+                        <!--==================== SKILLS 2 ====================-->
+                        <div class="skills__content skills__close">
+                           <div class="skills__header">
+                            <i class="uil uil-package skills__icon"></i>
+                               <div>
+                                   <h1 class="skills__title">HUB Processing</h1>
+                                   <span class="skills__subtitle">More than 6 months</span>
+                               </div>
+                               <i class="uil uil-angle-down skills__arrow"></i>
+                           </div>
+
+                           <div class="skills__list grid">
+                               <div class="skills__data">
+                                   <div class="skills__titles">
+                                       <h3 class="skills__name">Monitoring Courier</h3>
+                                       <span class="skills__number"><i class="uil uil-check-circle"></i></span>
+                                   </div>
+                               </div>
+
+                               <div class="skills__data">
+                                   <div class="skills__titles">
+                                       <h3 class="skills__name">CPC</h3>
+                                       <span class="skills__number"><i class="uil uil-check-circle"></i></span>
+                                   </div>
+                               </div>
+
+                               <div class="skills__data">
+                                   <div class="skills__titles">
+                                       <h3 class="skills__name">Return</h3>
+                                       <span class="skills__number"><i class="uil uil-check-circle"></i></span>
+                                   </div>
+                               </div>
+
+                               <div class="skills__data">
+                                   <div class="skills__titles">
+                                       <h3 class="skills__name">Stock Opname</h3>
+                                       <span class="skills__number"><i class="uil uil-check-circle"></i></span>
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
                 </div>
             </section>
 
@@ -406,7 +430,6 @@
                                 <div></div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                                 <div>
                                     <h3 class="qualification__title">AMIK Purnama Niaga</h3>
@@ -443,7 +466,6 @@
                                 <div></div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                                 <div>
                                     <h3 class="qualification__title">Inventory</h3>
@@ -454,21 +476,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!--==================== QUALIFICATION 3 ====================-->
-                            <!-- <div class="qualification__data">
-                                <div>
-                                    <h3 class="qualification__title">Computer Design</h3>
-                                    <span class="qualification__subtitle">Indo - University</span>
-                                    <div class="qualification__calendar">
-                                        <i class="uil uil-calendar-alt"></i>
-                                        2009 - 2014
-                                    </div>
-                                </div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -508,10 +515,6 @@
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I create ux element interactions.</p>
                                     </li>
-                                    <li class="services__modal-service">
-                                        <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -535,19 +538,19 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>I develop web using framework codeigniter 3.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p>Dynamic webpage.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>Easy to use.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
+                                        <p>Maintenance 24/7.</p>
                                     </li>
                                 </ul>
                             </div>
@@ -557,8 +560,8 @@
                     <!--==================== SERVICES 1 ====================-->
                     <div class="services__content">
                         <div>
-                            <i class="uil uil-pen services__icon"></i>
-                            <h3 class="services__title">Frontend <br> Designer</h3>
+                            <i class="uil uil-box services__icon"></i>
+                            <h3 class="services__title">Hub <br> Processing</h3>
                         </div>
                         <span class="button button--flex button--small button--link services__button">
                             View more
@@ -572,19 +575,27 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>Monitoring.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p>Report hourly & daily.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>Return packages.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
+                                        <p>Stock opname.</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Allocate & dispatch.</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Inbound & outbound.</p>
                                     </li>
                                 </ul>
                             </div>
@@ -605,31 +616,19 @@
                             <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Office Website</h3>
+                                <h3 class="portfolio__title">Website Back Office</h3>
                                 <p class="portfolio__description">Website adaptable to all devices, and friendly interactions.</p>
                                 <a href="#" class="button button--flex button--small portfolio__button">
                                     Demo <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                             </div>
                         </div>
-                        <!--==================== PORTFOLIO 2 ====================-->
-                        <!-- <div class="portfolio__content swiper-slide grid">
-                            <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
-
-                            <div class="portfolio__data">
-                                <h3 class="portfolio__title">Brand Design</h3>
-                                <p class="portfolio__description">Website adaptable to all devices, and animated interactions.</p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
-                                    Demo <i class="uil uil-arrow-right button__icon"></i>
-                                </a>
-                            </div>
-                        </div> -->
                         <!--==================== PORTFOLIO 3 ====================-->
                         <div class="portfolio__content swiper-slide grid">
                             <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Online Shop</h3>
+                                <h3 class="portfolio__title">Personal Website</h3>
                                 <p class="portfolio__description">Website adaptable to all devices, and easy to use.</p>
                                 <a href="#" class="button button--flex button--small portfolio__button">
                                     Demo <i class="uil uil-arrow-right button__icon"></i>
