--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                         </span>
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Frontend <br> Designer</h4>
+                                <h4 class="services__modal-title">Hub <br> Processing</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
