ganti url github

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <!-- <a href="#" target="_blank" class="home__social-icon">
                                 <i class="uil uil-dribbble"></i>
                             </a> -->
-                            <a href="https://github.com/adyafie-rifqi" target="_blank" class="home__social-icon">
+                            <a href="https://github.com/rifqiadyafie" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
                         </div>
