--- a/index.html
+++ b/index.html
@@ -757,7 +757,6 @@
                     <div>
                         <div class="contact__information">
                             <i class="uil uil-phone contact__icon"></i>
-
                             <div>
                                 <h3 class="contact__title">Hubungi saya</h3>
                                 <span class="contact__subtitle">+62 813-2261-2616</span>
@@ -783,31 +782,31 @@
                         </div>
                     </div>
 
-                    <form action="" class="contact__form grid">
+                    <form action="" class="contact__form grid" name="portfolio-contact-form">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Nama</label>
-                                <input type="text" class="contact__input">
+                                <input type="text" name="nama" class="contact__input">
                             </div>
                             <div class="contact__content">
                                 <label for="" class="contact__label">Email</label>
-                                <input type="email" class="contact__input">
+                                <input type="email" name="email" class="contact__input">
                             </div>
                         </div>
                         <div class="contact__content">
-                            <label for="" class="contact__label">Proyek</label>
-                            <input type="text" class="contact__input">
+                            <label for="" class="contact__label">Subyek</label>
+                            <input type="text" name="proyek" class="contact__input">
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Pesan</label>
-                            <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                            <textarea name="pesan" id="" cols="0" rows="7" class="contact__input"></textarea>
                         </div>
 
                         <div>
-                            <a href="#" class="button button--flex">
+                            <button type="submit" class="button button--flex">
                                 Kirim pesan
                                 <i class="uil uil-message button__icon"></i>
-                            </a>
+                            </button>
                         </div>
                     </form>
                 </div>
@@ -864,5 +863,17 @@
 
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
+
+        <script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbxSBAy7-GznupCUPe-z-KX0PUalfVqkfNV-kXLYR4KndacskIJoEC_ivRILMw4_XNyLKw/exec';
+            const form = document.forms['portfolio-contact-form'];
+          
+            form.addEventListener('submit', e => {
+              e.preventDefault()
+              fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+                .then(response => console.log('Success!', response))
+                .catch(error => console.error('Error!', error.message))
+            });
+          </script>
     </body>
 </html>
