update kualifikasi pekerjaan

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                             </svg>         
                         </div>
                         <div class="home__data">
-                            <h1 class="home__title">Hai, Saya Muhammad Rifqi Adyafie</h1>
-                            <h3 class="home_subtitle">Hub Processing & Web developer</h3>
+                            <h1 class="home__title">Muhammad Rifqi Adyafie</h1>
+                            <h3 class="home_subtitle">Hub Processing, Admin & Web developer</h3>
                             <p class="home__description">Pengalaman dalam bidang gudang logistik dan web developer.</p>
                             <a href="#contact" class="button button--flex">
                                 Hubungi <i class="uil uil-message button__icon"></i>
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="about__data">
-                        <p class="about__description">Pengalaman bekerja di gudang logistik membuat saya bisa bekerja menggunakan komputer maupun teknis, dan saya juga memiliki pengetahuan dalam pengembang web. Terbiasa bekerja tim maupun individu dan memberikan pekerjaan yang berkualitas.</p>
+                        <p class="about__description">Pengalaman bekerja di gudang logistik dan admin membuat saya bisa bekerja menggunakan komputer maupun teknis, dan saya juga memiliki pengetahuan dalam pengembang web. Terbiasa bekerja tim maupun individu dan memberikan pekerjaan yang berkualitas.</p>
 
                         <!-- <div class="about__info">
                             <div>
@@ -483,6 +483,23 @@
                                     </div>
                                 </div>
                             </div>
+                            
+                            <!--==================== QUALIFICATION 3 ====================-->
+                            <div class="qualification__data">
+                                <div>
+                                    <h3 class="qualification__title">Admin TA</h3>
+                                    <span class="qualification__subtitle">Indramayu - Refinery Unit VI Balongan</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2022
+                                    </div>
+                                </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
