--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Muhammad Rifqi Adyafie</h1>
                             <h3 class="home_subtitle">Hub Processing, Admin & Web developer</h3>
-                            <p class="home__description">Pengalaman dalam bidang gudang logistik dan web developer.</p>
+                            <p class="home__description">Pengalaman dalam bidang gudang logistik, administrative dan web developer.</p>
                             <a href="#contact" class="button button--flex">
                                 Hubungi <i class="uil uil-message button__icon"></i>
                             </a>
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="about__data">
-                        <p class="about__description">Pengalaman bekerja di gudang logistik dan admin membuat saya bisa bekerja menggunakan komputer maupun teknis, dan saya juga memiliki pengetahuan dalam pengembang web. Terbiasa bekerja tim maupun individu dan memberikan pekerjaan yang berkualitas.</p>
+                        <p class="about__description">Pengalaman bekerja di gudang logistik dan admin membuat saya bisa bekerja menggunakan komputer maupun teknis, dan saya juga memiliki pengetahuan dalam pengembang web. Bisa bekerja tim maupun individu dan memberikan pekerjaan yang berkualitas.</p>
 
                         <!-- <div class="about__info">
                             <div>
@@ -187,7 +187,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">HTML</h3>
-                                        <span class="skills__number">75%</span>
+                                        <span class="skills__number">70%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__html"></span>
@@ -197,7 +197,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">CSS</h3>
-                                        <span class="skills__number">60%</span>
+                                        <span class="skills__number">55%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__css"></span>
@@ -207,7 +207,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">JavaScript</h3>
-                                        <span class="skills__number">50%</span>
+                                        <span class="skills__number">35%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__js"></span>
@@ -231,7 +231,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">PHP</h3>
-                                        <span class="skills__number">80%</span>
+                                        <span class="skills__number">70%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__php"></span>
@@ -241,7 +241,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Node JS</h3>
-                                        <span class="skills__number">40%</span>
+                                        <span class="skills__number">30%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__node"></span>
@@ -251,7 +251,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">MySql</h3>
-                                        <span class="skills__number">70%</span>
+                                        <span class="skills__number">60%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__firebase"></span>
@@ -306,7 +306,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Illustrtor</h3>
+                                        <h3 class="skills__name">Illustrator</h3>
                                         <span class="skills__number">40%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -484,6 +484,21 @@
                                 </div>
                             </div>
                              
+                            <!--==================== QUALIFICATION 3 ====================-->
+                            <div class="qualification__data">
+                                <div>
+                                    <h3 class="qualification__title">HUB Processing</h3>
+                                    <span class="qualification__subtitle">Indramayu - KGXpress</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2022
+                                    </div>
+                                </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
