--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@
                                 <div></div>
                                 <div>
                                     <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
                                 </div>
                                 <div>
                                     <h3 class="qualification__title">Admin TA</h3>
@@ -486,6 +487,10 @@
                              
                             <!--==================== QUALIFICATION 3 ====================-->
                             <div class="qualification__data">
+                                <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                </div>
                                 <div>
                                     <h3 class="qualification__title">HUB Processing</h3>
                                     <span class="qualification__subtitle">Indramayu - KGXpress</span>
@@ -493,10 +498,6 @@
                                         <i class="uil uil-calendar-alt"></i>
                                         2022
                                     </div>
-                                </div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
                                 </div>
                             </div>
                         </div>
